prevent hover effect on mobile

--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -4,6 +4,10 @@
   overflow: hidden;
   transition: max-width 500ms, transform 500ms;
 
+  @mixin menu-background {
+    background-color: #f3f4f6;
+  }
+
   .logo-container {
     height: $navbar-height;
   }
@@ -29,14 +33,12 @@
       border-radius: 8px;
     }
 
-    .menu-link:hover,
     .menu-link.router-link-exact-active,
-    .sub-menu-link:hover,
     .sub-menu-link.router-link-exact-active {
-      background-color: #f3f4f6;
+      @include menu-background;
     }
 
-    .sub-menu-container {
+    .sub-menus-container {
       max-height: 0;
       overflow: hidden;
       transition: max-height 500ms;
@@ -71,6 +73,11 @@
     
     &.active {
       max-width: 255px;
+    }
+
+    .menu-link:hover,
+    .sub-menu-link:hover {
+      @include menu-background;
     }
   }
 
